--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <canvas id="nick-bouncer" aria-hidden="true"></canvas>
     <div class="icon-ul">
       <div class="icon-li">
         <img class="icon" src="ABOUTME.png" id="ABTMETOGGLE">
@@ -18,9 +19,11 @@
         <img class="icon" src="PORTFOLIO.png" id="PORTTOGGLE">
         <p class="icon-text">Portfolio</p>
       </div>
+      <div class="icon-li">
+        <img class="icon" src="artage-io-48177_1755031814.png" id="NEWTOGGLE">
+        <p class="icon-text">Modern Website</p>
+      </div>
     </div>
-
-    <!-- About Me Window -->
     <div class="aboutme-cont" id="ABTME">
       <div class="aboutme-header">
         <div class="aboutme-title">
@@ -50,8 +53,6 @@
         <a href="Resume.pdf" download>Resume</a>
       </div>
     </div>
-
-    <!-- Portfolio Window -->
     <div class="portfolio-cont">
       <div class="portfolio-header">
         <div class="portfolio-title"><p>Portfolio</p></div>
@@ -64,35 +65,34 @@
             <div class="portfolio-cell">Description</div>
             <div class="portfolio-cell">Image link</div>
           </div>
-
           <div class="portfolio-row">
             <div class="portfolio-cell">Martini Talent</div>
             <div class="portfolio-cell">Image creation for a marketing internship.</div>
             <div class="portfolio-cell"><a href="https://www.behance.net/gallery/232264191/Martini-Talent" target="_blank">images</a></div>
           </div>
-
           <div class="portfolio-row">
             <div class="portfolio-cell">CertaPro Painters</div>
             <div class="portfolio-cell">Image creation for a marketing internship.</div>
             <div class="portfolio-cell"><a href="https://www.behance.net/gallery/232264293/CertaPro-Painters" target="_blank">images</a></div>
           </div>
-
           <div class="portfolio-row">
             <div class="portfolio-cell">Ghoulish!</div>
             <div class="portfolio-cell">Album cover design for rapper Ghoulish!.</div>
             <div class="portfolio-cell"><a href="https://www.behance.net/gallery/232264367/Album-cover-design" target="_blank">images</a></div>
           </div>
-
           <div class="portfolio-row">
             <div class="portfolio-cell">Personal graphic design work</div>
             <div class="portfolio-cell">Various personal and experimental designs.</div>
             <div class="portfolio-cell"><a href="https://www.behance.net/gallery/227120209/Graphic-design-portfolio-%28speculativeconcept-only%29" target="_blank">images</a></div>
           </div>
+          <div class="portfolio-row">
+            <div class="portfolio-cell">Hit-boy</div>
+            <div class="portfolio-cell">Album concept art for grammy award winning rapper and producer Hit-boy.</div>
+            <div class="portfolio-cell"><a href="https://www.behance.net/gallery/233429609/hit-boy-album-cover-concept" target="_blank">images</a></div>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- Bottom Toolbar -->
     <div class="bottom-toolbar">
       <div class="outerborder">
         <div class="nest">
