--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
-    <canvas id="nick-bouncer" aria-hidden="true"></canvas>
     <div class="icon-ul">
       <div class="icon-li">
         <img class="icon" src="ABOUTME.png" id="ABTMETOGGLE">
@@ -105,4 +108,5 @@
   </body>
 
 </html>
+
 
